<resources>
    <string name="app_name">Lab11</string>
    <string name="character_title">Characters</string>
    <string name="CharacterDetails_Title">Character Details</string>
    <string name="options">Options</string>
    <string name="sort_from_z_a">Sort from Z-A</string>
    <string name="sort_from_a_z">Sort from A-Z</string>
    <string name="name_char">name</string>
    <string name="characteristics_character">characteristics</string>
    <string name="species">Species</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="CharactersTitle">Character</string>
    <string name="origin">origin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LogIn">Log in</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="TitleFragmentLogIn">Log In</string>
    <string name="logout">Log out</string>
    <string name="save">save</string>
    <string name="error_character_not_found">The character couldn\'t be found</string>
    <string name="successful_delete">The character was deleted from the database</string>
    <string name="successful_update">The character was succesfully updated</string>
    <string name="name">Name</string>
    <string name="episodes">Apperances</string>
</resources>